--- a/app/templates/eventFrames/eventFrames.html
+++ b/app/templates/eventFrames/eventFrames.html
@@ -62,7 +62,7 @@ Event Frames
                 <th></th>
                 <th>Event Frame</th>
                 <th>Name</th>
-                <th>Start Timestatmp</th>
+                <th>Start Timestamp</th>
                 <th>End Timestamp</th>
                 <th></th>
                 <th></th>
