--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -35,9 +35,9 @@
                 </li>
                 <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Templates <span class="caret"></span></a>
                     <ul class = "dropdown-menu">
-                        <li><a href = "{{ url_for("attributeTemplates.listAttributeTemplates") }}">Attribute Templates</a></li>
-                        <li><a href = "{{ url_for("elementTemplates.listElementTemplates") }}">Element Templates</a></li>
-                        <li><a href = "{{ url_for("eventFrameTemplates.listEventFrameTemplates") }}">Event Frame Templates</a></li>
+                        <li><a href = "{{ url_for("attributeTemplates.listAttributeTemplates") }}">Attributes</a></li>
+                        <li><a href = "{{ url_for("elementTemplates.listElementTemplates") }}">Elements</a></li>
+                        <li><a href = "{{ url_for("eventFrameTemplates.selectEventFrameTemplate") }}">Event Frames</a></li>
                     </ul>
                 </li>
                 <li class = "dropdown"><a href = "#" class = "dropdown-toggle" data-toggle = "dropdown">Elements <span class="caret"></span></a>
