--- a/app/templates/tags/tags.html
+++ b/app/templates/tags/tags.html
@@ -57,7 +57,7 @@ Tags
         ({
             order:
             [
-                [1, 'asc']              // Area
+                [1, 'asc']              // Area.
             ],
             "columns":
             [
