--- a/app/templates/eventFrames/eventFrames.html
+++ b/app/templates/eventFrames/eventFrames.html
@@ -56,7 +56,8 @@ Event Frames
         {% set url = url_for("eventFrames.addEventFrame", elementId = element.ElementId, eventFrameTemplateId = eventFrameTemplate.EventFrameTemplateId) %}
     {% endif %}
     <a class = "btn btn-default" title = "Add" href = "{{ url }}" role = "button"><span class="glyphicon glyphicon-plus"></a>
-    <table class = "table">
+    <br><br>
+    <table id = "eventFramesTable" class = "table">
         <thead>
             <tr>
                 <th></th>
@@ -113,4 +114,31 @@ Event Frames
     {% endif %}
 </div>
 {% endif %}
+{% endblock %}
+
+{% block scripts %}
+    {{ super() }}
+    <link rel = "stylesheet" type = "text/css" href = {{ url_for("static", filename = "css/datatables.min.css") }}/> 
+    <script type = "text/javascript" src = {{ url_for("static", filename = "js/datatables.min.js") }}></script>
+    <script>
+        $('#eventFramesTable').DataTable
+        ({
+            order:
+            [
+                [3, 'desc']              // Start timestamp.
+            ],
+            "columns":
+            [
+                { "orderable": false }, // Child event frames button.
+                null,
+                null,
+                null,
+                null,
+                { "orderable": false }, // Stop event frame button.
+                { "orderable": false }, // Edit event frame button.
+                { "orderable": false }  // Delete event frame button.
+            ],
+            stateSave: true
+        });
+    </script>
 {% endblock %}
