Sort tags by area path then name.

--- a/app/templates/tags/tags.html
+++ b/app/templates/tags/tags.html
@@ -57,7 +57,8 @@ Tags
         ({
             order:
             [
-                [1, 'asc']              // Area.
+                [1, 'asc'],             // Area.
+                [2, 'asc']              // Name.
             ],
             "columns":
             [
